# robot-trust-envelope

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: azure-static-web-apps-gray-sand-0b848070f.yml  ci.yml
docs/: fmea-worksheet.md  leave-behind.md  outreach.md  stpa-worksheet.md  trusted-launch-mapping.md
scripts/: record_trace.py  render_video.py  trace_check.py
sim/: README.md
site/: demo-trace.json  index.html
site/assets/: app.js  style.css
src/attestation_svc/: __init__.py  ca.py  quote.py  service.py
src/red_team_agent/: __init__.py  agent.py  scenarios.py
src/safety_envelope/: __init__.py  core.py  policy.py  ros2_node.py
src/sim_shim/: __init__.py
tests/: test_attestation.py  test_envelope.py  test_red_team_scenarios.py
