[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "robot-trust-envelope"
version = "0.1.0"
description = "Trusted Launch patterns + STPA-derived safety envelopes for robot fleets"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Amir Bredy" }]
dependencies = [
  "pyjwt[crypto]>=2.8",
  "cryptography>=41",
  "pydantic>=2.5",
]

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.4", "mypy>=1.8"]
agent = ["openai>=1.30"]
video = ["matplotlib>=3.8", "imageio-ffmpeg>=0.4"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
